<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_give_destination_address"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vave.getbike.activity.GiveDestinationAddressActivity">


    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Your Location"/>

            <TextView
                android:id="@+id/yourLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Destination"/>

            <AutoCompleteTextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Type your destination"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:background="@color/transparent"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:padding="5dp">
            <ImageButton
                android:id="@+id/takeRide"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/take_ride_small"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/rideEstimate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@color/get_bike_black"
                android:gravity="center"
                android:padding="3dp"
                android:visibility="invisible"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
