<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 Google, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarColoredBackArrow"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="fonts/AvenirNextLTPro-Regular.otf"
            android:text="@string/get_bike"
            android:textColor="@android:color/white"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/reach_customer_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/call_customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="3.25"
            android:background="@color/get_bike_black"
            android:gravity="center"
            android:text="CALL CUSTOMER"
            android:textColor="@color/white"
            android:visibility="visible"/>

        <Button
            android:id="@+id/navigation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1.98"
            android:background="@color/get_bike_black"
            android:text="Navigation"
            android:textColor="@color/white"
            android:visibility="visible"
            />

        <Button
            android:id="@+id/reached_customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/get_bike_black"
            android:text="Reached customer"
            android:textColor="@color/white"
            android:visibility="visible"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_tracking_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/thick_green"
            android:gravity="center"
            android:onClick="onStartTripClicked"
            android:text="START TRIP"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/stop_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:text="STOP TRIP"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/tripIdTextVIew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_weight="50"
                android:text="Trip ID "
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tripId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_weight="50"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/locationCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Locations Update"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/last_update_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location Update Time 00:00"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>


    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>