...
            android:layout_height="0dp"
            android:layout_weight="34"
            android:background="@color/white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/customerMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Type Customer Mobile Number Here"
                android:inputType="number"
                android:textStyle="bold"/>
...
            android:layout_weight="25"
            android:background="@color/transparent"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/giveRide"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@color/colorPrimary"
                android:text="Give Ride"
                android:textColor="@color/white"/>
...
